--- a/src/Omnius.Lxna.Ui.Desktop/Windows/Main/MainWindow.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Windows/Main/MainWindow.axaml
@@ -1,34 +1,52 @@
 <Window x:Class="Omnius.Lxna.Ui.Desktop.Windows.Main.MainWindow"
-        Title="Omnius.Lxna.Ui.Desktop"
-        xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
-        xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
-        xmlns:local="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Main;assembly=Omnius.Lxna.Ui.Desktop"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        Width="800"
-        Height="500"
-        FontFamily="Meiryo UI, Lucida Grande, Ubuntu"
-        x:DataType="local:MainWindowModelBase"
-        mc:Ignorable="d"
-        d:DesignWidth="800"
-        d:DesignHeight="450" >
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
+    xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
+    xmlns:local="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Main;assembly=Omnius.Lxna.Ui.Desktop"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:skp="clr-namespace:Avalonia.Svg.Skia;assembly=Avalonia.Svg.Skia"
+    Title="Lxna"
+    x:CompileBindings="True"
+    x:DataType="local:MainWindowModelBase"
+    Background="{x:Null}"
+    ExtendClientAreaTitleBarHeightHint="-1"
+    ExtendClientAreaToDecorationsHint="True"
+    ExtendClientAreaChromeHints="PreferSystemChrome"
+    FontFamily="Meiryo UI, Lucida Grande, Ubuntu"
+    TransparencyLevelHint="AcrylicBlur"
+    mc:Ignorable="d">
 
-    <Grid ColumnDefinitions="Auto,*">
-        <ListBox Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
-            <ListBox.Styles>
-                <Style Selector="ListBoxItem">
-                    <Setter Property="Height" Value="32" />
-                    <Setter Property="Width" Value="32" />
-                    <Setter Property="FontSize" Value="32"/>
-                    <Setter Property="FontWeight" Value="Bold"/>
-                </Style>
-            </ListBox.Styles>
-            <ListBoxItem />
-        </ListBox>
-        <Grid Grid.Column="1">
-            <local:FileExplorerView DataContext="{Binding FileExplorerViewModel}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-        </Grid>
-    </Grid>
+    <Panel Margin="{Binding $parent[Window].OffScreenMargin}">
+        <ExperimentalAcrylicBorder IsHitTestVisible="False">
+            <ExperimentalAcrylicBorder.Material>
+                <ExperimentalAcrylicMaterial TintColor="Black" MaterialOpacity="0.85" TintOpacity="1" />
+            </ExperimentalAcrylicBorder.Material>
+        </ExperimentalAcrylicBorder>
+        <DockPanel>
+            <StackPanel Height="30" DockPanel.Dock="Top" HorizontalAlignment="Left" VerticalAlignment="Stretch"
+                Orientation="Horizontal" IsHitTestVisible="False" Background="{x:Null}">
+                <skp:Svg Path="/Assets/lxna.svg" Margin="4" Width="16" VerticalAlignment="Center"/>
+                <TextBlock Text="{Binding $parent[Window].Title}" VerticalAlignment="Center" FontSize="16"/>
+            </StackPanel>
+
+            <Grid ColumnDefinitions="Auto,*">
+                <ListBox Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
+                    <ListBox.Styles>
+                        <Style Selector="ListBoxItem">
+                            <Setter Property="Height" Value="32" />
+                            <Setter Property="Width" Value="32" />
+                            <Setter Property="FontSize" Value="32"/>
+                            <Setter Property="FontWeight" Value="Bold"/>
+                        </Style>
+                    </ListBox.Styles>
+                    <ListBoxItem />
+                </ListBox>
+                <Grid Grid.Column="1">
+                    <local:FileExplorerView DataContext="{Binding FileExplorerViewModel}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                </Grid>
+            </Grid>
+        </DockPanel>
+    </Panel>
 </Window>
