--- a/src/Omnius.Lxna.Ui.Desktop/Windows/PicturePreview/PicturePreviewWindow.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Windows/PicturePreview/PicturePreviewWindow.axaml
@@ -8,10 +8,7 @@
     xmlns:local="clr-namespace:Omnius.Axis.Ui.Desktop.Windows.PicturePreview"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:skp="clr-namespace:Avalonia.Svg.Skia;assembly=Avalonia.Svg.Skia"
-    WindowStartupLocation="CenterOwner"
-    Title="Text input"
-    d:DesignHeight="300"
-    d:DesignWidth="500"
+    Title="Picture Preview"
     x:CompileBindings="True"
     x:DataType="local:PicturePreviewWindowModelBase"
     Background="{x:Null}"
@@ -31,7 +28,7 @@
         <DockPanel>
             <StackPanel Height="30" DockPanel.Dock="Top" HorizontalAlignment="Left" VerticalAlignment="Stretch"
                 Orientation="Horizontal" IsHitTestVisible="False" Background="{x:Null}">
-                <skp:Svg Path="/Assets/axis.svg" Margin="4" Width="16" VerticalAlignment="Center"/>
+                <skp:Svg Path="/Assets/lxna.svg" Margin="4" Width="16" VerticalAlignment="Center"/>
                 <TextBlock Text="{Binding $parent[Window].Title}" VerticalAlignment="Center" FontSize="16"/>
             </StackPanel>
 
