--- a/src/Omnius.Lxna.Ui.Desktop/Windows/Main/Views/FileExplorer/FileExplorerView.axaml
+++ b/src/Omnius.Lxna.Ui.Desktop/Windows/Main/Views/FileExplorer/FileExplorerView.axaml
@@ -4,6 +4,7 @@
         xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
         xmlns:ia="clr-namespace:Avalonia.Xaml.Interactions.Core;assembly=Avalonia.Xaml.Interactions"
         xmlns:local="clr-namespace:Omnius.Lxna.Ui.Desktop.Windows.Main;assembly=Omnius.Lxna.Ui.Desktop"
+        xmlns:lc="clr-namespace:Omnius.Lxna.Ui.Desktop.Converters;assembly=Omnius.Lxna.Ui.Desktop"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:progRing="clr-namespace:AvaloniaProgressRing;assembly=AvaloniaProgressRing"
@@ -12,6 +13,10 @@
         mc:Ignorable="d"
         d:DesignWidth="800"
         d:DesignHeight="450" >
+
+    <UserControl.Resources>
+        <lc:LevelPaddingConverter x:Key="LevelPaddingConverter"/>
+    </UserControl.Resources>
     <Panel>
         <Panel ZIndex="1" IsEnabled="{Binding IsWaiting.Value}" IsVisible="{Binding IsWaiting.Value}">
             <DockPanel HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -25,25 +30,23 @@
                 <ColumnDefinition Width="8" />
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <TreeView Name="TreeView" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                    ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Auto"
-                    Items="{Binding RootTreeViewModels}" SelectedItem="{Binding SelectedTreeViewModel.Value}">
-                <TreeView.Styles>
-                    <Style Selector="TreeViewItem">
-                        <Setter Property="IsExpanded" Value="{ReflectionBinding IsExpanded, Mode=TwoWay}"/>
-                    </Style>
-                </TreeView.Styles>
-                <TreeView.ItemTemplate>
-                    <TreeDataTemplate ItemsSource="{ReflectionBinding Children}">
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{ReflectionBinding Name}" HorizontalAlignment="Center"/>
-                        </StackPanel>
-                    </TreeDataTemplate>
-                </TreeView.ItemTemplate>
-            </TreeView>
+            <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+                <ItemsRepeater x:Name="TreeNodesRepeater" Items="{Binding RootTree.VisibleChildren}">
+                    <ItemsRepeater.ItemTemplate>
+                        <DataTemplate>
+                            <Border Padding="{Binding Level, Converter={StaticResource LevelPaddingConverter}}">
+                                <StackPanel Orientation="Horizontal">
+                                    <CheckBox IsChecked="{Binding IsExpanded}" VerticalAlignment="Center" />
+                                    <TextBlock Focusable="True" Text="{Binding Name}" Margin="5 0 0 0" VerticalAlignment="Center" />
+                                </StackPanel>
+                            </Border>
+                        </DataTemplate>
+                    </ItemsRepeater.ItemTemplate>
+                </ItemsRepeater>
+            </ScrollViewer>
             <GridSplitter Grid.Column="1" />
-            <ScrollViewer Grid.Column="2" x:Name="ScrollViewer" HorizontalScrollBarVisibility="Disabled">
-                <ItemsRepeater x:Name="ItemsRepeater" HorizontalAlignment="Stretch" Items="{ReflectionBinding Thumbnails}">
+            <ScrollViewer Grid.Column="2" x:Name="ThumbnailsViewer" HorizontalScrollBarVisibility="Disabled">
+                <ItemsRepeater x:Name="ThumbnailsRepeater" HorizontalAlignment="Stretch" Items="{ReflectionBinding Thumbnails}">
                     <ItemsRepeater.Layout>
                         <UniformGridLayout MinItemHeight="256" MinItemWidth="256" MinColumnSpacing="2" MinRowSpacing="2"/>
                     </ItemsRepeater.Layout>
